# SR_robot_control

./: CMakeLists.txt  Help.txt  README.md  Run - Copy.bat  checker.ini  log.txt
GermanMuseumXML/: Idle_Transition.xml  LOOKUP_Default_idle.xml  Laptop_Default_idle.xml
XMLAnimations/: Business_Introduction_Pointing.xml  Business_Pointing.xml  Business_Recommand.xml  Business_Static.xml  Business_Thank_You.xml  Emotion_Angry.xml  Emotion_Frustration.xml  Emotion_HappySmile.xml  Emotion_Ignore.xml  Emotion_Reject.xml  Emotion_Sad.xml  Emotion_Surprise.xml  HeadUP_Default_idle.xml  HeadUP_OneArmGesture.xml  HeadUP_TwoArmGesture.xml  HeadUP_Waving.xml  Idle_Transition.xml  LOOKUP_Default_idle.xml  LOOKUP_OneArmGesture.xml  LOOKUP_PostureDefault.xml  LOOKUP_TwoArmGesture.xml  LOOKUP_Waving.xml  Laptop_Default_idle.xml  Laptop_OneArmGesture.xml  Laptop_OneArmGesture_02_(Lookup).xml  Laptop_OneArmGesture_03_(Lookup).xml  Laptop_OneArmGesture_04_(Lookup).xml  Laptop_PostureDefault.xml  Laptop_TwoArmGesture_(Lookup).xml  Laptop_TwoArmGesture_02_(Lookup).xml  Laptop_Waving.xml  Laptop_Waving_(Lookup).xml  Laptop_Waving_02_(Lookup).xml  Laptop_Waving_03_(Lookup).xml  Laptop_Waving_03_x1(Lookup).xml  Laptop_Waving_03_x2(Lookup).xml  Laptop_Waving_03_x3(Lookup).xml  Laptop_Waving_04_(Lookup).xml  Laptop_idlebusy.xml  Nadine_Arm_Rest_in_Thigh.xml  (+59 more)
XMLAnimations/New/: Receptionist_Direction_Right.xml  Receptionist_Greeting_HandRaised.xml  Receptionist_Greeting_HandRaised_NoSmile.xml  Receptionist_Greeting_Steeple.xml
src/: AgentControl_server.bak  AgentControl_server.h  Cervevoice.cpp  Cervevoice.h  Joint.cpp  Joint.h  LipAnimationGenerator.cpp  LipAnimationGenerator.h  MayaWtenConverter.cpp  MayaWtenConverter.h  NadineAnimations.cpp  NadineAnimations.h  NadineControl.bak  NadineControl.cpp  NadineControl.h  NadineServer.cpp  NadineServer.h  ReadMe.txt  ThriftServer.cpp  ThriftServer.h  TrackingService.h  TrackingService_server.cpp  WorldClient.cpp  WorldClient.h  WorldQuery_server.cpp  WorldQuery_server.h  XMLWrapper.cpp  XMLWrapper.h  checkerCpp.cpp  checkerCpp.h  checkerWrapper.cpp  checkerWrapper.h  i2p_Nadine_Server.cpp  stdafx.cpp  structDef.h
